@@ -265,14 +265,6 @@ Select a C compiler other than the default.
 Select a C++ compiler other than the default.
 .It Fl ld Ar COMPILER
 Select a linker other than the default.
-.It Fl l Ns Ar LIBNAME
-Link with given library
-.Po
-.Sq lib Ns Ar LIBNAME
-on UNIX,
-.Sq Ar LIBNAME Ns .lib
-on Windows
-.Pc .
 .It Fl static-libs
 Link with static CHICKEN libraries and extensions.
 .It Fl F Ns Ar <DIR>
